<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/hotel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hotel_titles"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/icon_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_gallery"
        android:layout_alignStart="@+id/icon_gallery"
        android:layout_alignTop="@+id/icon_reservations"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/contacts" />

    <TextView
        android:id="@+id/gallery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_text"
        android:layout_alignBottom="@+id/info_text"
        android:layout_alignLeft="@+id/icon_contacts"
        android:layout_alignStart="@+id/icon_contacts"
        android:layout_centerHorizontal="true"
        android:text="@string/image_gallery"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_info"
        android:layout_alignStart="@+id/icon_info"
        android:layout_below="@+id/icon_info"
        android:layout_centerHorizontal="true"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/contacts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reservations_text"
        android:layout_alignBottom="@+id/reservations_text"
        android:layout_alignLeft="@+id/icon_contacts"
        android:layout_alignStart="@+id/icon_contacts"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/contacts"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/icon_reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info_text"
        android:layout_alignStart="@+id/info_text"
        android:layout_below="@+id/info_text"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/reservations" />

    <TextView
        android:id="@+id/reservations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon_reservations"
        android:layout_alignStart="@+id/icon_reservations"
        android:layout_below="@+id/icon_reservations"
        android:layout_marginTop="12dp"
        android:text="@string/reservations"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hotel_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:isIndicator="true" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/icon_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_below="@+id/ratingBar"
        android:layout_marginTop="21dp"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/info" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/icon_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gallery_text"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:src="@drawable/gallery" />

    <TextView
        android:id="@+id/hotel_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hotel_title"
        android:layout_centerHorizontal="true"
        android:scrollHorizontally="false"
        android:text="@string/hotel_town"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>